styling fix, shift colorConstants to constants.js

--- a/frontend/src/static/css/NoteContent.module.css
+++ b/frontend/src/static/css/NoteContent.module.css
@@ -21,7 +21,3 @@
 .titleBar {
     display: flex;
 }
-
-.bin {
-    flex: 1;   
-}
